USAGOV-1132-Realign-Footer-Button: Footer button fixed.
Added a container for the button to make it easier to position it.

--- a/web/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
+++ b/web/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
@@ -470,8 +470,6 @@ a,
 .usa-button {
   width: 100%;
   line-height: 1.5;
-  display: flex;
-  justify-content: left;
 
   @media (min-width: 30em) {
     width: auto;
@@ -998,7 +996,7 @@ p, a, .usa-label, .usa-radio__label {
   line-height: 1.5;
 }
 
-.usa-form {
+.usa-form .usa-button {
   margin-left: 4rem;
   @media (max-width: 30em) {
     margin-left: .4rem;
